--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -7,11 +7,6 @@
             mc:Ignorable="d"
             Title="桌面时钟" Height="660.037" Width="1419.773" Background="Transparent" WindowStyle="None" AllowsTransparency="true"
             Loaded="MainWindow_OnLoaded" ShowInTaskbar="False" MouseMove="window_MouseMove">
-    <Window.Resources>
-        <Style x:Key="myFont">
-            <Setter Property="TextElement.FontFamily" Value="#01 Digit"/>
-        </Style>
-    </Window.Resources>
 
     <Grid Background="#00000000" HorizontalAlignment="Left" Width="1410">
         <Grid.ColumnDefinitions>
@@ -21,19 +16,19 @@
             <ColumnDefinition Width="153*"/>
         </Grid.ColumnDefinitions>
 
-        <Label x:Name="tHour_" Content="00" HorizontalAlignment="Left" Height="291" Margin="10,49,0,0" VerticalAlignment="Top" Width="391" Style="{StaticResource myFont}" FontSize="340" Background="#00000000" Foreground="White" Grid.ColumnSpan="2"/>
-        <Label x:Name="tSecond" Content="00" HorizontalAlignment="Right" Height="165" Margin="0,169,164.023,0" VerticalAlignment="Top" Width="221" Style="{StaticResource myFont}" FontSize="180" Background="#00000000" Foreground="White" Grid.Column="1" Grid.ColumnSpan="3"/>
-        <Label x:Name="tMinute" Content="00" HorizontalAlignment="Right" Height="291" Margin="0,49,214.4,0" VerticalAlignment="Top" Width="391" Style="{StaticResource myFont}" FontSize="340" Background="#00000000" Foreground="White" Grid.Column="1"/>
-        <Label x:Name="HourMinuteDot" Content=":" HorizontalAlignment="Right" Height="291" Margin="0,76,552.4,0" VerticalAlignment="Top" Width="125" Style="{StaticResource myFont}" FontSize="280" Background="#00000000" Foreground="White" Grid.Column="1"/>
-        <Label x:Name="MinuteSecondDot" Content=":" HorizontalAlignment="Right" Height="165" Margin="0,169,96.4,0" VerticalAlignment="Top" Width="65" Style="{StaticResource myFont}" FontSize="180" Background="#00000000" Foreground="White" Grid.Column="1"/>
-        <Label x:Name="tYear" Grid.ColumnSpan="2" Content="0000-00-00" Style="{StaticResource myFont}" FontSize="160" Height="150" Margin="10,372,164.4,0" VerticalAlignment="Top" Foreground="White"/>
-        <Label x:Name="tDay" Grid.ColumnSpan="3" Content="ABC" Style="{StaticResource myFont}" FontSize="160" HorizontalAlignment="Left" Height="150" Margin="671.6,372,0,0" VerticalAlignment="Top" Width="282" Foreground="White" Grid.Column="1"/>
-        <TextBlock x:Name="WeatherInfo" Style="{StaticResource myFont}" HorizontalAlignment="Left" Height="106" Margin="10,546,0,0" VerticalAlignment="Top" Width="1090" FontSize="60" Grid.ColumnSpan="2">
+        <Label x:Name="tHour_" Content="00" HorizontalAlignment="Left" Height="291" Margin="10,49,0,0" VerticalAlignment="Top" Width="391" FontSize="340" Background="#00000000" Foreground="White" Grid.ColumnSpan="2" FontFamily="/DesktopTimer;component/#01 Digit"/>
+        <Label x:Name="tSecond" Content="00" HorizontalAlignment="Right" Height="165" Margin="0,169,164.023,0" VerticalAlignment="Top" Width="221" FontSize="180" Background="#00000000" Foreground="White" Grid.Column="1" Grid.ColumnSpan="3" FontFamily="/DesktopTimer;component/#01 Digit"/>
+        <Label x:Name="tMinute" Content="00" HorizontalAlignment="Right" Height="291" Margin="0,49,214.4,0" VerticalAlignment="Top" Width="391" FontSize="340" Background="#00000000" Foreground="White" Grid.Column="1" FontFamily="/DesktopTimer;component/#01 Digit"/>
+        <Label x:Name="HourMinuteDot" Content=":" HorizontalAlignment="Right" Height="291" Margin="0,76,552.4,0" VerticalAlignment="Top" Width="125" FontSize="280" Background="#00000000" Foreground="White" Grid.Column="1" FontFamily="/DesktopTimer;component/#01 Digit"/>
+        <Label x:Name="MinuteSecondDot" Content=":" HorizontalAlignment="Right" Height="165" Margin="0,169,96.4,0" VerticalAlignment="Top" Width="65" FontSize="180" Background="#00000000" Foreground="White" Grid.Column="1" FontFamily="/DesktopTimer;component/#01 Digit"/>
+        <Label x:Name="tYear" Grid.ColumnSpan="2" Content="0000-00-00" FontSize="160" Height="150" Margin="10,372,164.4,0" VerticalAlignment="Top" Foreground="White" FontFamily="/DesktopTimer;component/#01 Digit"/>
+        <Label x:Name="tDay" Grid.ColumnSpan="3" Content="ABC" FontSize="160" HorizontalAlignment="Left" Height="150" Margin="671.6,372,0,0" VerticalAlignment="Top" Width="282" Foreground="White" Grid.Column="1" FontFamily="/DesktopTimer;component/#01 Digit"/>
+        <TextBlock x:Name="WeatherInfo" HorizontalAlignment="Left" Height="106" Margin="10,546,0,0" VerticalAlignment="Top" Width="1090" FontSize="60" Grid.ColumnSpan="2" FontFamily="/DesktopTimer;component/#01 Digit">
              <Run x:Name="WeatherIcon" Foreground="White" Text="Loading Weather..."/>
             <Run x:Name="Temp" Foreground="Blue" Text=""/>
             <Run x:Name="Wind" Foreground="Aqua" Text=""/>
         </TextBlock>
-        <Label x:Name="RefreshWeatherBtn" Content=""  MouseLeftButtonDown="RefreshWeatherBtn_OnMouseDown" Grid.Column="3"   HorizontalAlignment="Left" Height="106" Margin="3.6,529,0,0" VerticalAlignment="Top" Width="90" Foreground="White" FontSize="60" RenderTransformOrigin="0.5,0.5" FontFamily="Segoe UI Symbol"/>
+        <Label x:Name="RefreshWeatherBtn" Content=""  MouseLeftButtonDown="RefreshWeatherBtn_OnMouseDown" Grid.Column="3"   HorizontalAlignment="Left" Height="64" Margin="41.6,541,0,0" VerticalAlignment="Top" Width="56" Foreground="#FF00FFFA" FontSize="40" RenderTransformOrigin="0.5,0.5" FontFamily="Segoe UI Symbol"/>
 
     </Grid>
 </Window>
