--- a/DesktopClock/Views/MainWindow.xaml
+++ b/DesktopClock/Views/MainWindow.xaml
@@ -7,9 +7,11 @@
         ui:WindowHelper.UseModernWindowStyle="True"
         xmlns:prism="http://prismlibrary.com/"
         prism:ViewModelLocator.AutoWireViewModel="True"
+        xmlns:viewmodels="clr-namespace:DesktopClock.ViewModels"
+        d:DataContext="{d:DesignInstance Type=viewmodels:MainWindowViewModel}"
         mc:Ignorable="d"
         Title="桌面时钟" Height="660.037" Width="1419.773" Background="Transparent" WindowStyle="None" AllowsTransparency="true"
-        Loaded="MainWindow_OnLoaded" ShowInTaskbar="False" MouseMove="window_MouseMove">
+        ShowInTaskbar="False" MouseMove="window_MouseMove">
     <Window.Resources>
         <Style TargetType="Label">
             <Setter Property="FontFamily" Value="../Resource/#01 Digit"/>
@@ -27,17 +29,17 @@
             <ColumnDefinition Width="153*"/>
         </Grid.ColumnDefinitions>
 
-        <Label x:Name="tHour_" Content="00" HorizontalAlignment="Left" Height="291" Margin="10,49,0,0" VerticalAlignment="Top" Width="391" FontSize="340" Background="#00000000" Foreground="White" Grid.ColumnSpan="2"/>
-        <Label x:Name="tSecond" Content="00" HorizontalAlignment="Right" Height="165" Margin="0,169,164.023,0" VerticalAlignment="Top" Width="221" FontSize="180" Background="#00000000" Foreground="White" Grid.Column="1" Grid.ColumnSpan="3"/>
-        <Label x:Name="tMinute" Content="00" HorizontalAlignment="Right" Height="291" Margin="0,49,214.4,0" VerticalAlignment="Top" Width="391" FontSize="340" Background="#00000000" Foreground="White" Grid.Column="1"/>
-        <Label x:Name="HourMinuteDot" Content=":" HorizontalAlignment="Right" Height="291" Margin="0,76,552.4,0" VerticalAlignment="Top" Width="125" FontSize="280" Background="#00000000" Foreground="White" Grid.Column="1"/>
-        <Label x:Name="MinuteSecondDot" Content=":" HorizontalAlignment="Right" Height="165" Margin="0,169,96.4,0" VerticalAlignment="Top" Width="65" FontSize="180" Background="#00000000" Foreground="White" Grid.Column="1"/>
-        <Label x:Name="tYear" Grid.ColumnSpan="2" Content="0000-00-00" FontSize="160" Height="150" Margin="10,372,164.4,0" VerticalAlignment="Top" Foreground="White"/>
-        <Label x:Name="tDay" Grid.ColumnSpan="3" Content="ABC" FontSize="160" HorizontalAlignment="Left" Height="150" Margin="671.6,372,0,0" VerticalAlignment="Top" Width="282" Foreground="White" Grid.Column="1"/>
+        <Label x:Name="tHour_" Content="{Binding HourText}" HorizontalAlignment="Left" Height="291" Margin="10,49,0,0" VerticalAlignment="Top" Width="391" FontSize="340" Background="#00000000" Foreground="White" Grid.ColumnSpan="2"/>
+        <Label x:Name="tSecond" Content="{Binding SecondText}" HorizontalAlignment="Right" Height="165" Margin="0,169,164.023,0" VerticalAlignment="Top" Width="221" FontSize="180" Background="#00000000" Foreground="White" Grid.Column="1" Grid.ColumnSpan="3"/>
+        <Label x:Name="tMinute" Content="{Binding MinuteText}" HorizontalAlignment="Right" Height="291" Margin="0,49,214.4,0" VerticalAlignment="Top" Width="391" FontSize="340" Background="#00000000" Foreground="White" Grid.Column="1"/>
+        <Label x:Name="HourMinuteDot" Content="{Binding HourMinuteDotText}" HorizontalAlignment="Right" Height="291" Margin="0,76,552.4,0" VerticalAlignment="Top" Width="125" FontSize="280" Background="#00000000" Foreground="White" Grid.Column="1"/>
+        <Label x:Name="MinuteSecondDot" Content="{Binding MinuteSecondDotText}" HorizontalAlignment="Right" Height="165" Margin="0,169,96.4,0" VerticalAlignment="Top" Width="65" FontSize="180" Background="#00000000" Foreground="White" Grid.Column="1"/>
+        <Label x:Name="tDate" Grid.ColumnSpan="2" Content="{Binding DateText}" FontSize="160" Height="150" Margin="10,372,164.4,0" VerticalAlignment="Top" Foreground="White"/>
+        <Label x:Name="tDay" Grid.ColumnSpan="3" Content="{Binding DayText}" FontSize="160" HorizontalAlignment="Left" Height="150" Margin="671.6,372,0,0" VerticalAlignment="Top" Width="282" Foreground="White" Grid.Column="1"/>
         <TextBlock x:Name="WeatherInfo" HorizontalAlignment="Left" Height="106" Margin="10,546,0,0" VerticalAlignment="Top" Width="1090" FontSize="60" Grid.ColumnSpan="2">
-             <Run x:Name="WeatherIcon" Foreground="White" Text="Loading Weather..."/>
-            <Run x:Name="Temp" Foreground="Blue" Text=""/>
-            <Run x:Name="Wind" Foreground="Aqua" Text=""/>
+            <Run x:Name="Weather" Foreground="{Binding WeatherForeground}" Text="{Binding WeatherText}"/>
+            <Run x:Name="Temp" Foreground="{Binding TempForeground}" Text="{Binding TempText}"/>
+            <Run x:Name="Wind" Foreground="{Binding WindForeground}" Text="{Binding WindText}"/>
         </TextBlock>
         <Label x:Name="RefreshWeatherBtn" Content=""  MouseLeftButtonDown="RefreshWeatherBtn_OnMouseDown" Grid.Column="3"   HorizontalAlignment="Left" Height="64" Margin="41.6,541,0,0" VerticalAlignment="Top" Width="56" Foreground="#FF00FFFA" FontSize="40" RenderTransformOrigin="0.5,0.5" FontFamily="Segoe UI Symbol"/>
 
