--- a/DesktopClock/App.xaml
+++ b/DesktopClock/App.xaml
@@ -1,7 +1,6 @@
 <Application x:Class="DesktopClock.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:ui="http://schemas.modernwpf.com/2019">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Application.Resources>
     </Application.Resources>
 </Application>
