--- a/DesktopClock/Views/MainWindow.xaml
+++ b/DesktopClock/Views/MainWindow.xaml
@@ -10,8 +10,13 @@
         xmlns:viewmodels="clr-namespace:DesktopClock.ViewModels"
         d:DataContext="{d:DesignInstance Type=viewmodels:MainWindowViewModel}"
         mc:Ignorable="d"
-        Title="桌面时钟" Height="660.037" Width="1419.773" Background="Transparent" WindowStyle="None" AllowsTransparency="true"
-        ShowInTaskbar="False" MouseMove="window_MouseMove">
+        Name="ClockWindow"
+        Title="桌面时钟" 
+        Height="660" 
+        Width="1420" 
+        Background="Transparent" WindowStyle="None" AllowsTransparency="true"
+        ShowInTaskbar="False" MouseMove="MainWindow_MouseMove"
+        Loaded="MainWindow_OnLoaded">
     <Window.Resources>
         <Style TargetType="Label">
             <Setter Property="FontFamily" Value="../Resource/#01 Digit"/>
@@ -20,7 +25,9 @@
             <Setter Property="FontFamily" Value="../Resource/#01 Digit"/>
         </Style>
     </Window.Resources>
-    <Grid Background="#00000000" HorizontalAlignment="Left" Width="1410">
+    <Viewbox Name="MainViewBox" Height="660" Width="1420" Stretch="Uniform">
+        <Canvas Height="660" Width="1420">
+            <Grid Background="#00000000" HorizontalAlignment="Left" Width="1410">
         
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="159*"/>
@@ -34,9 +41,9 @@
         <Label x:Name="tMinute" Content="{Binding MinuteText}" HorizontalAlignment="Right" Height="291" Margin="0,49,214.4,0" VerticalAlignment="Top" Width="391" FontSize="340" Background="#00000000" Foreground="White" Grid.Column="1"/>
         <Label x:Name="HourMinuteDot" Content="{Binding HourMinuteDotText}" HorizontalAlignment="Right" Height="291" Margin="0,76,552.4,0" VerticalAlignment="Top" Width="125" FontSize="280" Background="#00000000" Foreground="White" Grid.Column="1"/>
         <Label x:Name="MinuteSecondDot" Content="{Binding MinuteSecondDotText}" HorizontalAlignment="Right" Height="165" Margin="0,169,96.4,0" VerticalAlignment="Top" Width="65" FontSize="180" Background="#00000000" Foreground="White" Grid.Column="1"/>
-        <Label x:Name="tDate" Grid.ColumnSpan="2" Content="{Binding DateText}" FontSize="160" Height="150" Margin="10,372,164.4,0" VerticalAlignment="Top" Foreground="White"/>
+        <Label x:Name="tDate" Grid.ColumnSpan="2" Grid.Column="0" Content="{Binding DateText}" FontSize="160" Height="150" Margin="10,372,164.4,0" VerticalAlignment="Top" Foreground="White"/>
         <Label x:Name="tDay" Grid.ColumnSpan="3" Content="{Binding DayText}" FontSize="160" HorizontalAlignment="Left" Height="150" Margin="671.6,372,0,0" VerticalAlignment="Top" Width="282" Foreground="White" Grid.Column="1"/>
-        <TextBlock x:Name="WeatherInfo" HorizontalAlignment="Left" Height="106" Margin="10,546,0,0" VerticalAlignment="Top" Width="1090" FontSize="60" Grid.ColumnSpan="2">
+        <TextBlock x:Name="WeatherInfo" HorizontalAlignment="Left" Height="106" Margin="10,546,0,0" VerticalAlignment="Top" Width="1090" FontSize="60" Grid.ColumnSpan="2" Grid.Column="0">
             <Run x:Name="Weather" Foreground="White" Text="{Binding WeatherText}"/>
             <Run x:Name="Temp" Foreground="Blue" Text="{Binding TempText}"/>
             <Run x:Name="Wind" Foreground="Aqua" Text="{Binding WindText}"/>
@@ -51,4 +58,6 @@
 
         <ContentControl Grid.Column="0" prism:RegionManager.RegionName="ContentRegion" />
     </Grid>
+        </Canvas>
+    </Viewbox>
 </Window>
