--- a/DesktopClock/Views/MainWindow.xaml
+++ b/DesktopClock/Views/MainWindow.xaml
@@ -11,53 +11,67 @@
         d:DataContext="{d:DesignInstance Type=viewmodels:MainWindowViewModel}"
         mc:Ignorable="d"
         Name="ClockWindow"
-        Title="桌面时钟" 
-        Height="660" 
-        Width="1420" 
+        Title="桌面时钟"
+        Height="660"
+        Width="1420"
         Background="Transparent" WindowStyle="None" AllowsTransparency="true"
         ShowInTaskbar="False" MouseMove="MainWindow_MouseMove"
         Loaded="MainWindow_OnLoaded">
     <Window.Resources>
         <Style TargetType="Label">
-            <Setter Property="FontFamily" Value="../Resource/#01 Digit"/>
+            <Setter Property="FontFamily" Value="../Resource/#01 Digit" />
         </Style>
         <Style TargetType="TextBlock">
-            <Setter Property="FontFamily" Value="../Resource/#01 Digit"/>
+            <Setter Property="FontFamily" Value="../Resource/#01 Digit" />
         </Style>
     </Window.Resources>
     <Viewbox Name="MainViewBox" Height="660" Width="1420" Stretch="Uniform">
         <Canvas Height="660" Width="1420">
             <Grid Background="#00000000" HorizontalAlignment="Left" Width="1410">
-        
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="159*"/>
-            <ColumnDefinition Width="482*"/>
-            <ColumnDefinition Width="0*"/>
-            <ColumnDefinition Width="153*"/>
-        </Grid.ColumnDefinitions>
 
-        <Label x:Name="tHour_" Content="{Binding HourText}" HorizontalAlignment="Left" Height="291" Margin="10,49,0,0" VerticalAlignment="Top" Width="391" FontSize="340" Background="#00000000" Foreground="White" Grid.ColumnSpan="2"/>
-        <Label x:Name="tSecond" Content="{Binding SecondText}" HorizontalAlignment="Right" Height="165" Margin="0,169,164.023,0" VerticalAlignment="Top" Width="221" FontSize="180" Background="#00000000" Foreground="White" Grid.Column="1" Grid.ColumnSpan="3"/>
-        <Label x:Name="tMinute" Content="{Binding MinuteText}" HorizontalAlignment="Right" Height="291" Margin="0,49,214.4,0" VerticalAlignment="Top" Width="391" FontSize="340" Background="#00000000" Foreground="White" Grid.Column="1"/>
-        <Label x:Name="HourMinuteDot" Content="{Binding HourMinuteDotText}" HorizontalAlignment="Right" Height="291" Margin="0,76,552.4,0" VerticalAlignment="Top" Width="125" FontSize="280" Background="#00000000" Foreground="White" Grid.Column="1"/>
-        <Label x:Name="MinuteSecondDot" Content="{Binding MinuteSecondDotText}" HorizontalAlignment="Right" Height="165" Margin="0,169,96.4,0" VerticalAlignment="Top" Width="65" FontSize="180" Background="#00000000" Foreground="White" Grid.Column="1"/>
-        <Label x:Name="tDate" Grid.ColumnSpan="2" Grid.Column="0" Content="{Binding DateText}" FontSize="160" Height="150" Margin="10,372,164.4,0" VerticalAlignment="Top" Foreground="White"/>
-        <Label x:Name="tDay" Grid.ColumnSpan="3" Content="{Binding DayText}" FontSize="160" HorizontalAlignment="Left" Height="150" Margin="671.6,372,0,0" VerticalAlignment="Top" Width="282" Foreground="White" Grid.Column="1"/>
-        <TextBlock x:Name="WeatherInfo" HorizontalAlignment="Left" Height="106" Margin="10,546,0,0" VerticalAlignment="Top" Width="1090" FontSize="60" Grid.ColumnSpan="2" Grid.Column="0">
-            <Run x:Name="Weather" Foreground="White" Text="{Binding WeatherText}"/>
-            <Run x:Name="Temp" Foreground="Blue" Text="{Binding TempText}"/>
-            <Run x:Name="Wind" Foreground="Aqua" Text="{Binding WindText}"/>
-        </TextBlock>
-        <Button x:Name="RefreshWeatherBtn" Content=""  
-                Command="{Binding WeatherFreshButtonCommand}" 
-                Grid.Column="3"   HorizontalAlignment="Left" 
-                Height="64" Margin="41.6,541,0,0"
-                VerticalAlignment="Top" Width="56" Foreground="#FF00FFFA"
-                Background="Transparent" BorderBrush="Transparent"
-                FontSize="40" RenderTransformOrigin="0.5,0.5" FontFamily="Segoe UI Symbol"/>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="159*" />
+                    <ColumnDefinition Width="482*" />
+                    <ColumnDefinition Width="0*" />
+                    <ColumnDefinition Width="153*" />
+                </Grid.ColumnDefinitions>
 
-        <ContentControl Grid.Column="0" prism:RegionManager.RegionName="ContentRegion" />
-    </Grid>
+                <Label x:Name="tHour_" Content="{Binding HourText}" HorizontalAlignment="Left" Height="291"
+                       Margin="10,49,0,0" VerticalAlignment="Top" Width="391" FontSize="340" Background="#00000000"
+                       Foreground="White" Grid.ColumnSpan="2" />
+                <Label x:Name="tSecond" Content="{Binding SecondText}" HorizontalAlignment="Right" Height="165"
+                       Margin="0,169,164.023,0" VerticalAlignment="Top" Width="221" FontSize="180"
+                       Background="#00000000" Foreground="White" Grid.Column="1" Grid.ColumnSpan="3" />
+                <Label x:Name="tMinute" Content="{Binding MinuteText}" HorizontalAlignment="Right" Height="291"
+                       Margin="0,49,214.4,0" VerticalAlignment="Top" Width="391" FontSize="340" Background="#00000000"
+                       Foreground="White" Grid.Column="1" />
+                <Label x:Name="HourMinuteDot" Content="{Binding HourMinuteDotText}" HorizontalAlignment="Right"
+                       Height="291" Margin="0,76,552.4,0" VerticalAlignment="Top" Width="125" FontSize="280"
+                       Background="#00000000" Foreground="White" Grid.Column="1" />
+                <Label x:Name="MinuteSecondDot" Content="{Binding MinuteSecondDotText}" HorizontalAlignment="Right"
+                       Height="165" Margin="0,169,96.4,0" VerticalAlignment="Top" Width="65" FontSize="180"
+                       Background="#00000000" Foreground="White" Grid.Column="1" />
+                <Label x:Name="tDate" Grid.ColumnSpan="2" Grid.Column="0" Content="{Binding DateText}" FontSize="160"
+                       Height="150" Margin="10,372,164.4,0" VerticalAlignment="Top" Foreground="White" />
+                <Label x:Name="tDay" Grid.ColumnSpan="3" Content="{Binding DayText}" FontSize="160"
+                       HorizontalAlignment="Left" Height="150" Margin="671.6,372,0,0" VerticalAlignment="Top"
+                       Width="282" Foreground="White" Grid.Column="1" />
+                <TextBlock x:Name="WeatherInfo" HorizontalAlignment="Left" Height="106" Margin="10,546,0,0"
+                           VerticalAlignment="Top" Width="1090" FontSize="60" Grid.ColumnSpan="2" Grid.Column="0">
+                    <Run x:Name="Weather" Foreground="White" Text="{Binding WeatherText}" />
+                    <Run x:Name="Temp" Foreground="Blue" Text="{Binding TempText}" />
+                    <Run x:Name="Wind" Foreground="Aqua" Text="{Binding WindText}" />
+                </TextBlock>
+                <Button x:Name="RefreshWeatherBtn" Content=""
+                        Command="{Binding WeatherFreshButtonCommand}"
+                        Grid.Column="3" HorizontalAlignment="Left"
+                        Height="64" Margin="41.6,541,0,0"
+                        VerticalAlignment="Top" Width="56" Foreground="#FF00FFFA"
+                        Background="Transparent" BorderBrush="Transparent"
+                        FontSize="40" RenderTransformOrigin="0.5,0.5" FontFamily="Segoe UI Symbol" />
+
+                <ContentControl Grid.Column="0" prism:RegionManager.RegionName="ContentRegion" />
+            </Grid>
         </Canvas>
     </Viewbox>
 </Window>
